examples/benchmark/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prime-numbers
spec:
  selector:
    matchLabels:
      app: prime-numbers
  replicas: 1
  template:
    metadata:
      labels:
        app: prime-numbers
    spec:
      containers:
        - name: prime-numbers
          image: pentabanana/prime-numbers
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 250m
