examples/benchmark/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prime-numbers
  labels:
    app: prime-numbers
spec:
  ports:
    - port: 8080
  selector:
    app: prime-numbers
